# mcp-openems

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: README.md  microstrip_50ohm.py
src/mcp_openems/: __init__.py  server.py
tests/: test_smoke.py
